# CAME-Net

./: .gitignore  METHOD_SECTION.tex  PROJECT_STRUCTURE.md  README.md  came_net.py  data_utils.py  equiv_loss.py  gca.py  gln.py  mpe.py  pyproject.toml  requirements.txt  run_small_modelnet_experiment.py  small_modelnet_experiment.py  test.py  test_came_net.py  test_method_alignment.py  test_modelnet40_data.py  test_small_modelnet_experiment.py  train.py
docs/: CODE_MAP.md  EXPERIMENTS.md
experiments/: README.md  __init__.py  attention_score_search.py  comparison_baselines.py  comparison_experiment.py  controlled_geometry_experiments.py  download_scannet_subset.py  pointcloud_comparison_models.py  robustness_benchmark.py  run_attention_score_search.py  run_comparison_experiment.py  run_robustness_benchmark.py  run_scannet_comparison_experiment.py  run_scannet_multimodal_experiment.py  run_scannet_paper_visualizations.py  run_scannet_point_relevance_figure.py  run_scannet_qualitative_figure.py  run_scannet_rigid_benchmark.py  run_scannet_spatial_robustness_figure.py  run_small_modelnet_experiment.py  scannet_comparison_experiment.py  scannet_multimodal_data.py  scannet_multimodal_experiment.py  scannet_paper_visualizations.py  scannet_point_relevance_figure.py  scannet_qualitative_figure.py  scannet_rigid_benchmark.py  scannet_spatial_robustness_figure.py  small_modelnet_experiment.py
method/: __init__.py  came_net.py  equiv_loss.py  gca.py  gln.py  mpe.py  pga_algebra.py
scripts/: download-scannet.py  prepare_modelnet40.py
training/: __init__.py  data_utils.py  (+2 more)
(+8 files in other folders)
